# Carplay

./: .gitattributes  .gitignore  PRD.md  README.md
carplay/: README.md  install-vendor.sh  launch.sh
config/: gauges.toml  labwc-rc.xml  obd2.toml  react-carplay-config.json  truckdash.toml
docs/: phase1-notes.md
obd2/: .gitignore  PIDS.md  README.md  probe-2.txt  probe-tft.txt  pyproject.toml
obd2/tests/: test_config.py  test_csvlog.py  test_daemon.py
obd2/tools/: README.md  probe_mode22.py
obd2/truckdash_obd2/: __main__.py  adapter.py  config.py  csvlog.py  daemon.py  publisher.py
scripts/: README.md  configure-display.sh  find-pi.ps1  install.sh  phase0-setup.sh
systemd/: truckdash-carplay.service  truckdash-obd2.service  truckdash-overlay.service  truckdash.target
udev/: 99-truckdash.rules
ui-overlay/: README.md  index.html  install-overlay.sh  launch.sh  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ui-overlay/electron/: main.ts  preload.ts  types.d.ts
ui-overlay/src/: App.tsx  Gauge.tsx  types.ts  ws.ts
